[package]
name = "ssd1312"
version = "0.1.4"
edition = "2024"
description = "a driver for ssd1312(iic interface), tested on STM32H723ZGT6, may there be some errors, please forgive me that i am publishing a crate for the first time, if you have confusion, please go to the link below to my github repository to comment your issues"
license = "MIT"
authors = ["linkyourbin"]
repository = "https://github.com/linkyourbin/ssd1312"
exclude = ["build.rs", "demo.png"]
[[bin]]
name = "ssd1312"
path = "examples/ssd1312.rs"
keywords = ["no-std", "ssd1312", "oled", "embassy"]

[dependencies]
embassy-stm32 = { version = "0.2.0",  features = [ "defmt", "stm32h723zg", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0",  features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.1"}

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8.0", default-features = false }
nb = "1.1.0"
static_cell = "2.1.1"

embedded-graphics = "0.8.1"


[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
# opt-level = "s"         # 
overflow-checks = false
lto = "fat"